force-app/main/default/objects/Moderation_Block_Pattern__mdt/Moderation_Block_Pattern__mdt.object-meta.xml
<CustomObject>
    <label>Moderation Block Pattern</label>
    <pluralLabel>Moderation Block Patterns</pluralLabel>
</CustomObject>