force-app/main/default/objects/Moderation_Block_Pattern__mdt/fields/Block_Message__c.field-meta.xml
<CustomField>
    <fullName>Block_Message__c</fullName>
    <label>Block Message</label>
    <type>TextArea</type>
</CustomField>