force-app/main/default/objects/Moderation_Block_Pattern__mdt/fields/Block_REGEX_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Block_REGEX_Patterns__c</fullName>
    <label>Block REGEX Patterns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>