force-app/main/default/objects/Moderation_Block_Pattern__mdt/fields/Block_Words__c.field-meta.xml
<CustomField>
    <fullName>Block_Words__c</fullName>
    <label>Block Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>