force-app/main/default/objects/Moderation_Block_Pattern__mdt/fields/Escape_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Escape_Patterns__c</fullName>
    <inlineHelpText>Use escape patterns to allow a patterns explicit tagged with with affirmative text. For e.g. if a number needs to be entered that resemble SSN one could enter it as follows
This content does not contain SSN: 987342345(!ssn) blah blah</inlineHelpText>
    <label>Escape Patterns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>