force-app/main/default/objects/Moderation_Block_Pattern__mdt/fields/Redact_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Redact_Pattern__c</fullName>
    <inlineHelpText>! means input character will be repeated in output; 
X is mask character repeated in output;
Any other character will be repeated as is;

e.g. &quot; 4534234567890987 &quot; with redact pattern &quot;&apos;!!XXX-XXXX-XXXX-!!!!!&quot; will be output as &quot; 4XXX-XXXX-XXXX-0987 &quot;</inlineHelpText>
    <label>Redact Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>