force-app/main/default/objects/Moderation_Block_Pattern__mdt/validationRules/If_Redacting_Dont_Specify_Escape_Pattern.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Redacting_Dont_Specify_Escape_Pattern</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISBLANK( Redact_Pattern__c )  &amp;&amp; NOT ISBLANK ( Escape_Patterns__c )</errorConditionFormula>
    <errorDisplayField>Escape_Patterns__c</errorDisplayField>
    <errorMessage>If you want to redact please do not provide &quot;Escape Patterns&quot;</errorMessage>
</ValidationRule>