force-app/main/default/objects/Moderation_Block_Pattern__mdt/validationRules/If_Redacting_Dont_Specify_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Redacting_Dont_Specify_Message</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISBLANK( Block_Message__c )  &amp;&amp; NOT  ISBLANK( Redact_Pattern__c )</errorConditionFormula>
    <errorDisplayField>Block_Message__c</errorDisplayField>
    <errorMessage>If Redact pattern specified, do not specify Block Message</errorMessage>
</ValidationRule>